new_tests/semantics/type/bad/006_GLOBAL_1.cm
/*
    Type Error 401

    1| def global a:Int = 1.34
    Global variable 'a' was declared with type Int, but 'a' was initialized to a value of type Real.

    Suggestion:
    A variable declared with type Int must be initialized to a value of type Int.
*/

def global a:Int = 1.34 
